# cmi-dag

./: .gitignore  MATH.md  README.md  pyproject.toml
cmi_dag/: __init__.py  builder.py  information.py  krecursion.py  optimize.py  rate_region.py
docs/: README.md  builder-notes.md  tutorial-1-installation-and-first-cmi.md  tutorial-2-multi-root-and-conditional-covariance.md  tutorial-3-rate-functions-and-pga.md  tutorial-4-sign-indefinite-and-pga-descent.md  tutorial-5-reproducing-random-mac.md
examples/: .gitignore  README.md  correlated_sources_cmi.py  random_mac.py  rate_region_maximization.py  secure_precoding.py
gaussian_dag_cmi/: __init__.py  information.py  rate_region.py
tests/: gdag_reference.py  test_builder.py  test_closed_form.py  test_conditional_entropy.py  test_conditional_information.py  test_correlated_roots.py  test_device_agnostic.py  test_effective_channel.py  test_krecursion_multiroot.py  test_no_drift_from_gdag.py  test_optimize.py  test_rate_region.py  test_schur_solve_and_validation.py
