[project]
name = "gaussian-dag-cmi"
version = "0.1.0"
description = "Conditional mutual information and gradient-based optimization for linear Gaussian-DAG multi-terminal networks, extending gaussian-dag with multi-root K-recursion."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Tadashi Wadayama", email = "wadayama@nitech.ac.jp" },
]
keywords = [
    "conditional-mutual-information",
    "gaussian-dag",
    "multi-terminal",
    "automatic-differentiation",
    "wirtinger-calculus",
    "mimo",
    "information-theory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.12.0",
    "numpy>=2.0",
    "gaussian-dag>=0.1.0",
]

[project.optional-dependencies]
examples = [
    "matplotlib>=3.10",
]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/wadayama/gaussian-dag-cmi"
Repository = "https://github.com/wadayama/gaussian-dag-cmi"
Issues = "https://github.com/wadayama/gaussian-dag-cmi/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gaussian_dag_cmi"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
gaussian-dag = { path = "../gaussian-dag-public", editable = true }
